# ORB_SLAM3_changed

./: README.md
ORB_SLAM3/: CMakeLists.txt  FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt  KeyFrameTrajectory_TUM_Format.txt  build.sh  build_ros.sh
ORB_SLAM3/Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc  mono_tum_vi.cc
ORB_SLAM3/Examples/Monocular-Inertial/: mono_inertial_euroc.cc  mono_inertial_tum_vi.cc
ORB_SLAM3/Examples/RGB-D/: TUM1.yaml  TUM2.yaml  rgbd_tum.cc
ORB_SLAM3/Examples/ROS/ORB_SLAM3/: CMakeLists.txt
ORB_SLAM3/Examples/ROS/ORB_SLAM3/src/: ros_mono_inertial.cc  ros_stereo_inertial.cc
ORB_SLAM3/Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc  stereo_tum_vi.cc
ORB_SLAM3/Examples/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
ORB_SLAM3/configYaml/: Asus.yaml  endscope.yaml  endscope_.yaml  intel_RGBD.yaml  newcamera.yaml
ORB_SLAM3/include/: Converter.h  G2oTypes.h  LoopClosing.h  OptimizableTypes.h  Optimizer.h  System.h  Tracking.h  pointcloudmapping.h
ORB_SLAM3/src/: ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc  pointcloudmapping.cc
g2o_changed/: tutorial_after.g2o  tutorial_before.g2o
g2o_changed/g2o/examples/data_fitting/: CMakeLists.txt
g2o_changed/g2o/solvers/eigen/: linear_solver_eigen.h
g2o_changed/g2o/types/slam2d/: edge_se2_pointxy_bearing.cpp
